@ feat(antiground): add anti-penalty ghost block floor path + code quality overhaul
- New: /csweep antiground — client-side ghost block strip below sweep path
  eliminates floating mining penalty during horizontal movement
- New: auto flight toggle: ON for descents, OFF for horizontal layers
- New: /cbuy /csell shop automation, /cplacement Litematica placement move
- Fix: avoidWater no longer gated behind autoSpeed
- Fix: parseDuration unified (CcraftCommand delegates to CtimerCommand)
- Fix: stateId reflection now logs warning on failure
- Fix: autoJump persists in config/client-tools/global.json
- Refactor: extracted ContainerUtils, ShopCommandHelper (eliminates ~95% dup)
- Refactor: standardized on List.of()
- Chore: bump version to 1.3.0-beta

Co-Authored-By: Claude <noreply@anthropic.com>
@